test/expected/explain_rrf_v-c++03.out
explain void f() &&
             ^
14: error: reference qualified functions are not supported until C++11
